force-app/main/default/objects/Quote/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <formula>Contact.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact - Fax</label>
    <type>Text</type>
</CustomField>