force-app/main/default/objects/Quote/fields/Current_User_Can_approve__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Can_approve__c</fullName>
    <formula>$User.Next_Discount_to_Approve__c  &gt;= Max_Discount_Percentge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Can approve</label>
    <type>Checkbox</type>
</CustomField>