force-app/main/default/objects/Quote/fields/DocuSigned__c.field-meta.xml
<CustomField>
    <fullName>DocuSigned__c</fullName>
    <inlineHelpText>Is this Quote signed through DocuSign?</inlineHelpText>
    <label>DocuSigned?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>