force-app/main/default/objects/Quote/fields/Forecasting_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Price_Total__c</fullName>
    <label>Forecasting Price Total</label>
    <summarizedField>QuoteLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Quantity</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>