force-app/main/default/objects/Quote/fields/Grand_Total_NXF__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_NXF__c</fullName>
    <label>Grand Total</label>
    <summarizedField>QuoteLineItem.Subtotal_Salesprice_Discount_for_Roll_Up__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Quantity</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>