force-app/main/default/objects/Quote/fields/Incoterms_Approved__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incoterms Approved</label>
    <type>Checkbox</type>
</CustomField>