force-app/main/default/objects/Quote/fields/Incoterms_Destination__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Destination__c</fullName>
    <inlineHelpText>Please fill in the port of destination related to Incoterms</inlineHelpText>
    <label>Incoterms Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>