force-app/main/default/objects/Quote/fields/Max_Discount_Percentge__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percentge__c</fullName>
    <label>Max Discount Percentge</label>
    <summarizedField>QuoteLineItem.Sales_Discount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>