force-app/main/default/objects/Quote/fields/Price_Book_test__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_test__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book test</label>
    <type>Text</type>
</CustomField>