force-app/main/default/objects/Quote/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Your Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>