force-app/main/default/objects/Quote/fields/Roll_up_helper_for_delete_process__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_helper_for_delete_process__c</fullName>
    <label>Roll up helper for delete process</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Id</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>