force-app/main/default/objects/Quote/fields/Roll_up_TEXT_for_shipping_cost_product_1__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_TEXT_for_shipping_cost_product_1__c</fullName>
    <label>Roll up TEXT for shipping cost product 1</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Roll_up_TEXT_for_shipping_cost_product1__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>