force-app/main/default/objects/Quote/fields/Transportation_Cost_Checked__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Cost_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transportation Costs Verified</label>
    <type>Checkbox</type>
</CustomField>