force-app/main/default/objects/Quote/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>