force-app/main/default/objects/Quote/validationRules/Add_Shipping_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Shipping_Line</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

IsSyncing = true,

NOT(ISPICKVAL( Transportation_Status__c ,&quot;Excluded&quot;)) ,

Roll_up_TEXT_for_shipping_cost_product_1__c  = 0 ,

Roll_up_TEXT_for_shipping_cost_product_2__c  = 0

)</errorConditionFormula>
    <errorMessage>You need to add Shipping Line at the Quote Line Items</errorMessage>
</ValidationRule>