force-app/main/default/objects/Quote/validationRules/Fill_in_Incoterms_destination.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_in_Incoterms_destination</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 ISPICKVAL(Transportation_Status__c, &quot;Included&quot;),
 ISBLANK(Incoterms_Destination__c)

)</errorConditionFormula>
    <errorDisplayField>Incoterms_Destination__c</errorDisplayField>
    <errorMessage>You need to fill in Incoterms Destination when Transport Cost is included.</errorMessage>
</ValidationRule>