force-app/main/default/objects/Quote/validationRules/Transport_Cost_needs_to_be_verified.validationRule-meta.xml
<ValidationRule>
    <fullName>Transport_Cost_needs_to_be_verified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

IsSyncing = true,

Transportation_Cost_Checked__c = false,

ISPICKVAL(Transportation_Status__c, &quot;Included&quot;)

)</errorConditionFormula>
    <errorMessage>Transport cost needs to be verified.</errorMessage>
</ValidationRule>