force-app/main/default/objects/Quote/validationRules/You_cannot_make_quote_before_approve.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_make_quote_before_approve</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL( Opportunity.Account.Approval_Status__c, &quot;Account approved&quot;))</errorConditionFormula>
    <errorMessage>You cannot make a Quote before Account is approved by Finance</errorMessage>
</ValidationRule>