force-app/main/default/objects/Quote/validationRules/You_cannot_verify_transport_cost.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_verify_transport_cost</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

(Transportation_Cost_Checked__c),

$Permission.Permission_to_verify_transport_cost = false

)</errorConditionFormula>
    <errorMessage>You do not have the permission to verify transport cost</errorMessage>
</ValidationRule>