force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Approval_Status__c</columns>
    <columns>CreatedBy</columns>
    <columns>Price_Book_test__c</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>Incoterms__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>