force-app/main/default/objects/Quote/listViews/All_Draft_Quotex.listView-meta.xml
<ListView>
    <fullName>All_Draft_Quotex</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Approval_Status__c</columns>
    <columns>Grand_Total_NXF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Pre Quote</value>
    </filters>
    <label>All - Draft Quote</label>
</ListView>