force-app/main/default/objects/Quote/listViews/All_Quotes_need_verify_Transport_Costs.listView-meta.xml
<ListView>
    <fullName>All_Quotes_need_verify_Transport_Costs</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transportation_Cost_Checked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Transportation_Status__c</field>
        <operation>equals</operation>
        <value>Included</value>
    </filters>
    <label>All - Quotes need verify Transport Costs</label>
    <sharedTo>
        <role>Sales_Support</role>
    </sharedTo>
</ListView>