force-app/main/default/objects/Quote/listViews/Unsynced_Quotes.listView-meta.xml
<ListView>
    <fullName>Unsynced_Quotes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>Approval_Status__c</columns>
    <columns>CreatedBy</columns>
    <columns>Price_Book_test__c</columns>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>Incoterms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.ISSYNCING</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unsynced Quotes</label>
</ListView>